Bug 238517 - Kgpg crashes upon completing first time wizard
Summary: Kgpg crashes upon completing first time wizard
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-22 18:42 UTC by Oded Arbel
Modified: 2010-05-24 10:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2010-05-22 18:42:51 UTC
Application: kgpg (2.3.0)
KDE Platform Version: 4.4.3 (KDE 4.4.3)
Qt Version: 4.6.2
Operating System: Linux 2.6.33.4-95.fc13.x86_64 x86_64
Distribution: "Fedora release 13 (Goddard)"

-- Information about the crash:
I completed the first time wizard, with an existin gnupg  configuration with an existing private key.
When Kgpg started running after the wizard completed, it immediately crashed

 -- Backtrace:
Application: KGpg (kgpg), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#5  KeysManager::setDefaultKeyNode (this=0x289c530, key=0x0) at /usr/src/debug/kdeutils-4.4.3/kgpg/keysmanager.cpp:1288
#6  0x0000000000474b67 in KGpgApp::assistantOver (this=0x28a3130, defaultKeyId=<value optimized out>) at /usr/src/debug/kdeutils-4.4.3/kgpg/kgpg.cpp:61
#7  0x0000000000474c0e in KGpgApp::qt_metacall (this=0x28a3130, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9f27dd30)
    at /usr/src/debug/kdeutils-4.4.3/x86_64-redhat-linux-gnu/kgpg/kgpg.moc:75
#8  0x000000368216a81f in QMetaObject::activate (sender=0x2d8a800, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff9f27dd30) at kernel/qobject.cpp:3293
#9  0x0000000000420833 in KGpgExternalActions::updateDefault (this=<value optimized out>, _t1=<value optimized out>)
    at /usr/src/debug/kdeutils-4.4.3/x86_64-redhat-linux-gnu/kgpg/moc_kgpgexternalactions.cpp:162
#10 0x000000000049e853 in KGpgExternalActions::slotSaveOptionsPath (this=0x2d8a800) at /usr/src/debug/kdeutils-4.4.3/kgpg/kgpgexternalactions.cpp:450
#11 0x0000000000420e1d in KGpgExternalActions::qt_metacall (this=0x2d8a800, _c=QMetaObject::InvokeMetaMethod, _id=18, _a=0x7fff9f27df40)
    at /usr/src/debug/kdeutils-4.4.3/x86_64-redhat-linux-gnu/kgpg/moc_kgpgexternalactions.cpp:132
#12 0x000000368216a81f in QMetaObject::activate (sender=0x2d8bb60, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3293
#13 0x000000356162b8b5 in QDialog::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fff9f27e120) at .moc/release-shared/moc_qdialog.cpp:96
#14 0x0000003562388715 in KDialog::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9f27e120)
    at /usr/src/debug/kdelibs-4.4.3/x86_64-redhat-linux-gnu/kdeui/kdialog.moc:151
#15 0x000000356243a9e0 in KPageDialog::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9f27e120)
    at /usr/src/debug/kdelibs-4.4.3/x86_64-redhat-linux-gnu/kdeui/kpagedialog.moc:70
#16 0x0000003562375ef8 in KAssistantDialog::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>)
    at /usr/src/debug/kdelibs-4.4.3/x86_64-redhat-linux-gnu/kdeui/kassistantdialog.moc:70
#17 0x00000000004216a0 in KGpgFirstAssistant::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9f27e120)
    at /usr/src/debug/kdeutils-4.4.3/x86_64-redhat-linux-gnu/kgpg/moc_kgpgfirstassistant.cpp:69
#18 0x000000368216a81f in QMetaObject::activate (sender=0x2d8bb60, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3293
#19 0x0000003562386b62 in KDialog::slotButtonClicked (this=0x2d8bb60, button=4096) at /usr/src/debug/kdelibs-4.4.3/kdeui/dialogs/kdialog.cpp:878
#20 0x00000035623889f2 in KDialog::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0x7fff9f27e360)
    at /usr/src/debug/kdelibs-4.4.3/x86_64-redhat-linux-gnu/kdeui/kdialog.moc:190
#21 0x000000356243a9e0 in KPageDialog::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9f27e360)
    at /usr/src/debug/kdelibs-4.4.3/x86_64-redhat-linux-gnu/kdeui/kpagedialog.moc:70
#22 0x0000003562375ef8 in KAssistantDialog::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>)
    at /usr/src/debug/kdelibs-4.4.3/x86_64-redhat-linux-gnu/kdeui/kassistantdialog.moc:70
#23 0x00000000004216a0 in KGpgFirstAssistant::qt_metacall (this=0x2d8bb60, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9f27e360)
    at /usr/src/debug/kdeutils-4.4.3/x86_64-redhat-linux-gnu/kgpg/moc_kgpgfirstassistant.cpp:69
#24 0x000000368216a81f in QMetaObject::activate (sender=0x2d8bcb8, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff9f27e360) at kernel/qobject.cpp:3293
#25 0x000000368216deae in QSignalMapper::mapped (this=<value optimized out>, _t1=4096) at .moc/release-shared/moc_qsignalmapper.cpp:101
#26 0x000000368216df50 in QSignalMapper::map (this=0x2d8bcb8, sender=0x2c975d0) at kernel/qsignalmapper.cpp:266
#27 0x000000368216f220 in QSignalMapper::qt_metacall (this=0x2d8bcb8, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fff9f27e4f0) at .moc/release-shared/moc_qsignalmapper.cpp:87
#28 0x000000368216a81f in QMetaObject::activate (sender=0x2c975d0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff9f27e4f0) at kernel/qobject.cpp:3293
#29 0x00000035617df802 in QAbstractButton::clicked (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#30 0x000000356152efbb in QAbstractButtonPrivate::emitClicked (this=<value optimized out>) at widgets/qabstractbutton.cpp:546
#31 0x000000356153033b in QAbstractButtonPrivate::click (this=0x2c97610) at widgets/qabstractbutton.cpp:539
#32 0x00000035615305ac in QAbstractButton::mouseReleaseEvent (this=0x2c975d0, e=0x7fff9f27ee40) at widgets/qabstractbutton.cpp:1121
#33 0x00000035611f5aba in QWidget::event (this=0x2c975d0, event=0x7fff9f27ee40) at kernel/qwidget.cpp:7998
#34 0x00000035611aaa0c in QApplicationPrivate::notify_helper (this=0x289d210, receiver=0x2c975d0, e=0x7fff9f27ee40) at kernel/qapplication.cpp:4300
#35 0x00000035611b11ad in QApplication::notify (this=<value optimized out>, receiver=0x2c975d0, e=0x7fff9f27ee40) at kernel/qapplication.cpp:3865
#36 0x0000003562406da6 in KApplication::notify (this=0x28a3130, receiver=0x2c975d0, event=0x7fff9f27ee40) at /usr/src/debug/kdelibs-4.4.3/kdeui/kernel/kapplication.cpp:302
#37 0x0000003682157cdc in QCoreApplication::notifyInternal (this=0x28a3130, receiver=0x2c975d0, event=0x7fff9f27ee40) at kernel/qcoreapplication.cpp:704
#38 0x00000035611b039e in sendEvent (receiver=0x2c975d0, event=0x7fff9f27ee40, alienWidget=0x2c975d0, nativeWidget=0x2d8bb60, buttonDown=0x3561c2b128, lastMouseReceiver=..., spontaneous=true)
    at ../../src/corelib/kernel/qcoreapplication.h:215
#39 QApplicationPrivate::sendMouseEvent (receiver=0x2c975d0, event=0x7fff9f27ee40, alienWidget=0x2c975d0, nativeWidget=0x2d8bb60, buttonDown=0x3561c2b128, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2965
#40 0x00000035612223c5 in QETWidget::translateMouseEvent (this=0x2d8bb60, event=<value optimized out>) at kernel/qapplication_x11.cpp:4373
#41 0x0000003561220d3c in QApplication::x11ProcessEvent (this=0x28a3130, event=0x7fff9f27f760) at kernel/qapplication_x11.cpp:3506
#42 0x0000003561249d12 in x11EventSourceDispatch (s=0x28a8870, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#43 0x000000367683bd02 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#44 0x000000367683fae8 in ?? () from /lib64/libglib-2.0.so.0
#45 0x000000367683fc9c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#46 0x000000368217d603 in QEventDispatcherGlib::processEvents (this=0x2876bd0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#47 0x00000035612499de in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#48 0x0000003682156722 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#49 0x00000036821569ec in QEventLoop::exec (this=0x7fff9f27fa90, flags=...) at kernel/qeventloop.cpp:201
#50 0x0000003682158cd9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#51 0x0000000000476624 in main (argc=1, argv=0x7fff9f27ff58) at /usr/src/debug/kdeutils-4.4.3/kgpg/main.cpp:57

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2010-05-23 19:47:32 UTC
SVN commit 1129769 by dakon:

don't crash if the first time assistant tells us a key id we currently do not have loaded

BUG:238517


 M  +6 -0      keysmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129769
Comment 2 Rolf Eike Beer 2010-05-23 20:09:11 UTC
SVN commit 1129775 by dakon:

don't crash if the first time assistant tells us a key id we currently do not have loaded

forward-port of r1129769

CCBUG:238517

 M  +6 -0      keysmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129775
Comment 3 Oded Arbel 2010-05-24 10:10:29 UTC
Thanks for the quick fix!