don't crash if the first time assistant tells us a key id we currently do not have loaded

BUG:238517

svn path=/branches/KDE/4.4/kdeutils/kgpg/; revision=1129769